2016-08-30  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/77377
	* simplify-rtx.c (avoid_constant_pool_reference): For out of bounds
	constant pool reference return x instead of c.

2016-08-29  Segher Boessenkool  <segher@kernel.crashing.org>

	* config/rs6000/rs6000.h (CALL_REALLY_USED_REGISTERS): Do not
	include MQ.

2016-08-29  David Malcolm  <dmalcolm@redhat.com>

	* input.c
	(selftest::test_make_location_nonpure_range_endpoints): Fix
	header comment.

2016-08-29  David Malcolm  <dmalcolm@redhat.com>

	* diagnostic-show-locus.c
	(selftest::test_one_liner_fixit_validation_adhoc_locations): New
	function.
	(selftest::test_diagnostic_show_locus_one_liner): Call it.
	* input.c (get_pure_location): Move to libcpp/line-map.c.
	* input.h (get_pure_location): Convert decl to an inline function
	calling implementation in libcpp.

2016-08-29  Uros Bizjak  <ubizjak@gmail.com>

	PR target/77403
	* config/i386/sse.md (vec_set_lo_<mode><mask_name>): Fix assembler
	template for intel asm dialect.
	(vec_set_hi_<mode><mask_name>): Ditto.

2016-08-29  David Malcolm  <dmalcolm@redhat.com>

	* selftest.h (selftest::fail): Add ATTRIBUTE_NORETURN.
	(selftest::fail_formatted): Likewise.

2016-08-29  David Malcolm  <dmalcolm@redhat.com>

	* input.c (make_location): Call get_start and get_finish
	on the endpoints to avoid storing packed ranges or ad-hoc
	ranges in them.
	(selftest::test_make_location_nonpure_range_endpoints): New function.
	(selftest::input_c_tests): Call it.
	* input.h (get_start): New inline function.

2016-08-29  Tom de Vries  <tom@codesourcery.com>

	PR c/77398
	* gimplify.c (gimplify_va_arg_expr): Replace first argument type error
	with assert.

2016-08-29  Eric Botcazou  <ebotcazou@adacore.com>

	* Makefile.in (gcov-iov.h): Add dummy recipe.

2016-08-29  Nathan Sidwell  <nathan@acm.org>

	* config/nvptx/nvptx.c: #include tree-vrp.h.

2016-08-28  Eric Botcazou  <ebotcazou@adacore.com>

	PR target/77324